tests/good/example-04.rat
fn Main () -> Void {
  Println("napis");
  Println(ShowInt(5));
  Println(ShowBoolean(True));
  Println(Concat("liczba: ", ShowInt(5)));
  return;
}