tests/bad/example-e09.rat
fn Main () -> Void {
  return 1;
}
